<resources>
    <string name="app_name">MasterDetailExample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile_image">Foto de perfil</string>
    <string name="menu_pokemon">Personajes de pokemon</string>
    <string name="menu_location">Ubicación</string>
    <string name="text_hint_url">Ingrese link de foto</string>
    <string name="text_hint_phrase">Ingrese texto</string>
    <string name="text_button">Generar foto</string>
    <string name="text_button_pick_placeholder">Seleccione imagen predeterminada</string>
    <string name="text_title_pokemon">Nombre del pokemon:</string>
    <string name="presiona_reintentar">Presiona para reintentar</string>
    <string name="goto_activity">Ir a la pantalla 4</string>
    <string name="text_title_locations">Coordenadas guardadas:</string>
    <string name="text_title_coordinate">Coordenadas:</string>
    <string name="text_title_time">Hora de captura:</string>
    <string name="text_notification">Se está compartiendo tu ubicación en segundo plano</string>
    <string name="text_title_notification">MasterDetail\n</string>
    <string name="title_location_permission">¡Atención!</string>
    <string name="text_location_permission">Se requieren los siguientes permisos</string>
    <string name="ok">Aceptar</string>
</resources>