<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile_image">

    <fragment
        android:id="@+id/nav_profile_image"
        android:name="com.example.masterdetailexample.ui.profileImage.ProfileImageFragment"
        android:label="@string/menu_profile_image"
        tools:layout="@layout/fragment_profile_image" />

    <fragment
        android:id="@+id/nav_pokemon"
        android:name="com.example.masterdetailexample.ui.pokemon.PokemonFragment"
        android:label="@string/menu_pokemon"
        tools:layout="@layout/fragment_pokemon" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.example.masterdetailexample.ui.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />
</navigation>