<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profileImage.ProfileImageFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_profile_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_profile_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_url">



        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginTop="@dimen/margin8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_profile_photo"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_phrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_phrase">



        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pick_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/text_button_pick_placeholder"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_phrase" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_generate_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:text="@string/text_button"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pick_placeholder" />

    <ImageView
        android:id="@+id/iv_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margin16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_generate_photo"
        tools:src="@drawable/baseline_account_circle_24" />

</androidx.constraintlayout.widget.ConstraintLayout>